// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component renders ok Performs initial render with rowCount: -1 1`] = `
.emotion-0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  min-width: 100%;
  position: relative;
  table-layout: fixed;
}

.emotion-0 th {
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0 th[data-sort-type] {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 th[aria-sort]::after {
  float: right;
}

.emotion-0 th[aria-sort="ascending"]::after {
  content: "↑";
}

.emotion-0 th[aria-sort="descending"]::after {
  content: "↓";
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  overflow: hidden;
}

.emotion-1 * {
  box-sizing: border-box;
}

<div
  className="emotion-1"
>
  <table
    className="emotion-0"
    style={
      Object {
        "right": 0,
      }
    }
  >
    <colgroup />
    <thead
      onClick={[Function]}
    >
      <tr />
    </thead>
  </table>
</div>
`;

exports[`Table component renders ok Performs initial render with rowCount: -2 1`] = `
.emotion-0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  min-width: 100%;
  position: relative;
  table-layout: fixed;
}

.emotion-0 th {
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0 th[data-sort-type] {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 th[aria-sort]::after {
  float: right;
}

.emotion-0 th[aria-sort="ascending"]::after {
  content: "↑";
}

.emotion-0 th[aria-sort="descending"]::after {
  content: "↓";
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  overflow: hidden;
}

.emotion-1 * {
  box-sizing: border-box;
}

<div
  className="emotion-1"
>
  <table
    className="emotion-0"
    style={
      Object {
        "right": 0,
      }
    }
  >
    <colgroup />
    <thead
      onClick={[Function]}
    >
      <tr />
    </thead>
  </table>
</div>
`;

exports[`Table component renders ok Performs initial render with rowCount: 0 1`] = `
.emotion-0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  min-width: 100%;
  position: relative;
  table-layout: fixed;
}

.emotion-0 th {
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0 th[data-sort-type] {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 th[aria-sort]::after {
  float: right;
}

.emotion-0 th[aria-sort="ascending"]::after {
  content: "↑";
}

.emotion-0 th[aria-sort="descending"]::after {
  content: "↓";
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  overflow: hidden;
}

.emotion-1 * {
  box-sizing: border-box;
}

<div
  className="emotion-1"
>
  <table
    className="emotion-0"
    style={
      Object {
        "right": 0,
      }
    }
  >
    <colgroup />
    <thead
      onClick={[Function]}
    >
      <tr />
    </thead>
  </table>
</div>
`;

exports[`Table component renders ok Performs initial render with rowCount: 1 1`] = `
.emotion-1 {
  contain: paint;
  width: 100%;
  will-change: transform;
  table-layout: auto;
}

.emotion-3 {
  min-height: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  overflow: hidden;
}

.emotion-2 {
  overflow: auto;
  position: absolute;
  top: 0;
  left: 0;
}

.emotion-0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  min-width: 100%;
  position: relative;
  table-layout: fixed;
}

.emotion-0 th {
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0 th[data-sort-type] {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 th[aria-sort]::after {
  float: right;
}

.emotion-0 th[aria-sort="ascending"]::after {
  content: "↑";
}

.emotion-0 th[aria-sort="descending"]::after {
  content: "↓";
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  overflow: hidden;
}

.emotion-4 * {
  box-sizing: border-box;
}

<div
  className="emotion-4"
>
  <table
    className="emotion-0"
    style={
      Object {
        "right": 0,
      }
    }
  >
    <colgroup />
    <thead
      onClick={[Function]}
    >
      <tr />
    </thead>
  </table>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      onScroll={[Function]}
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
      tabIndex="0"
    >
      <div
        style={
          Object {
            "height": 20,
            "maxHeight": 20,
            "pointerEvents": "auto",
          }
        }
      >
        <table
          aria-rowcount={1}
          className="emotion-1"
          style={
            Object {
              "tableLayout": undefined,
              "transform": "translateY(0px)",
            }
          }
        >
          <colgroup />
          <tbody>
            <tr
              aria-rowindex={0}
            />
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table component renders ok Performs initial render with rowCount: 2 1`] = `
.emotion-1 {
  contain: paint;
  width: 100%;
  will-change: transform;
  table-layout: auto;
}

.emotion-3 {
  min-height: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  overflow: hidden;
}

.emotion-2 {
  overflow: auto;
  position: absolute;
  top: 0;
  left: 0;
}

.emotion-0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  min-width: 100%;
  position: relative;
  table-layout: fixed;
}

.emotion-0 th {
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0 th[data-sort-type] {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 th[aria-sort]::after {
  float: right;
}

.emotion-0 th[aria-sort="ascending"]::after {
  content: "↑";
}

.emotion-0 th[aria-sort="descending"]::after {
  content: "↓";
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  overflow: hidden;
}

.emotion-4 * {
  box-sizing: border-box;
}

<div
  className="emotion-4"
>
  <table
    className="emotion-0"
    style={
      Object {
        "right": 0,
      }
    }
  >
    <colgroup />
    <thead
      onClick={[Function]}
    >
      <tr />
    </thead>
  </table>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      onScroll={[Function]}
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
      tabIndex="0"
    >
      <div
        style={
          Object {
            "height": 40,
            "maxHeight": 40,
            "pointerEvents": "auto",
          }
        }
      >
        <table
          aria-rowcount={2}
          className="emotion-1"
          style={
            Object {
              "tableLayout": undefined,
              "transform": "translateY(0px)",
            }
          }
        >
          <colgroup />
          <tbody>
            <tr
              aria-rowindex={0}
            />
            <tr
              aria-rowindex={1}
            />
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table component renders ok Performs initial render with rowCount: undefined 1`] = `
.emotion-0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  min-width: 100%;
  position: relative;
  table-layout: fixed;
}

.emotion-0 th {
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0 th[data-sort-type] {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 th[aria-sort]::after {
  float: right;
}

.emotion-0 th[aria-sort="ascending"]::after {
  content: "↑";
}

.emotion-0 th[aria-sort="descending"]::after {
  content: "↓";
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  overflow: hidden;
}

.emotion-1 * {
  box-sizing: border-box;
}

<div
  className="emotion-1"
>
  <table
    className="emotion-0"
    style={
      Object {
        "right": 0,
      }
    }
  >
    <colgroup />
    <thead
      onClick={[Function]}
    >
      <tr />
    </thead>
  </table>
</div>
`;
